--- a/_data/organizers.yml
+++ b/_data/organizers.yml
@@ -1,10 +1,7 @@
 - 
-  group: "Main organizer"
+  group: "Organizadores"
   elements: 
-    - {name: "GDG Lviv", description: "GDG Lviv - Open and volunteer geek community", link: "http://lviv.gdg.org.ua", imageUrl: "gdg-lviv.svg"}
-- 
-  group: "Co-organizers"
-  elements: 
-    - {name: "GDG Lviv", description: "GDG Kyiv - Open and volunteer geek community", link: "http://kyiv.gdg.org.ua", imageUrl: "gdg-kyiv.svg"}
-    - {name: "GDG Cherkassy", description: "GDG Cherkassy - Open and volunteer geek community", link: "http://cherkassy.gdg.org.ua", imageUrl: "gdg-cherkasy.svg"}
-    - {name: "GDG Dnipropetrovsk", description: "GDG Dnipropetrovsk - Open and volunteer geek community", link: "http://dnipro.gdg.org.ua", imageUrl: "gdg-dnipropetrovsk.svg"}
+    - {name: "GDG Rio de Janeiro", description: "GDG Rio de Janeiro", link: "http://kyiv.gdg.org.ua", imageUrl: "gdg-rio-de-janeiro.svg"}
+    - {name: "GDG Juiz de Fora", description: "GDG Juiz de Fora", link: "http://kyiv.gdg.org.ua", imageUrl: "gdg-juiz-de-fora.svg"}
+    - {name: "GDG Belo Horizonte", description: "GDG Belo Horizonte", link: "http://kyiv.gdg.org.ua", imageUrl: "gdg-belo-horizonte.svg"}
+    - {name: "GDG Uberaba", description: "GDG Uberaba", link: "http://kyiv.gdg.org.ua", imageUrl: "gdg-uberaba.svg"}
