--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1,50 +1,42 @@
 - 
   date: "2014-10-24"
-  dateReadable: "October 24"
+  dateReadable: "8 de Novembro"
   tracks: 
-    - {title: "Android", color: "#90be4e"}
-    - {title: "Web & Cloud", color: "#03a9f4"}
-    - {title: "Community", color: "#e91e63"}
+    - {title: "Palestras", color: "#90be4e"}
+    #- {title: "Hackathon", color: "#03a9f4"}
   timeslots:
     - {
-    	startTime: "10:00",
-    	endTime: "10:45",
-    	sessionIds: [002, 003, 004]
+    	startTime: "8:30",
+      endTime: "9:00",
+    	sessionIds: [001]
     }
     - {
-        startTime: "11:00",
-        endTime: "11:45",
-        sessionIds: [003, 404, 004]
+        startTime: "09:00",
+        endTime: "09:20",
+        sessionIds: [002],
     }
     - {
-    	startTime: "12:00",
-    	endTime: "11:45",
-    	sessionIds: [307]
-    }
-- 
-  date: "2014-10-25"
-  dateReadable: "October 25"
-  tracks: 
-    - {title: "Android", color: "#90be4e"}
-    - {title: "Web & Cloud", color: "#03a9f4"}
-  timeslots: 
-    - {
-    	startTime: "10:00",
-    	endTime: "10:45",
-    	sessionIds: [404, 002]
+        startTime: "9:20",
+        endTime: "12:00",
+        sessionIds: [003],
     }
     - {
-    	startTime: "11:00",
-    	endTime: "11:45",
-    	sessionIds: [002, 003]
+        startTime: "12:00",
+        endTime: "13:00",
+        sessionIds: [004],
     }
     - {
         startTime: "13:00",
-        endTime: "13:45",
-        sessionIds: [003]
+        endTime: "16:00",
+        sessionIds: [005],
     }
     - {
-    	startTime: "14:00",
-    	endTime: "15:00",
-    	sessionIds: [503]
+        startTime: "16:00",
+        endTime: "16:30",
+        sessionIds: [006],
+    }
+    - {
+        startTime: "16:30",
+        endTime: "18:20",
+        sessionIds: [007],
     }
