--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ partnersC4sponsorsButton: "Seja um patrocinador"
 # Subscribe Block
 subscribeImage: "subscribe.jpg"
 subscribeTitle: "Acompanhe as novidades"
-subscribeAction: "http://gdg.us5.list-manage1.com/subscribe/post?u=9fc8aa205b0521b5f05fc8e1e&amp;id=ae0fb459fc"
+subscribeAction: "http://emjuizdefora.us8.list-manage1.com/subscribe?u=54a5ee254093d994f8fe9af77&id=85ce972c0f"
 subscribeInfo: "Cadastre-se e receba todas as novidades sobre o DevFest Sudeste!"
 
 # Tickets Block
