--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -7,13 +7,8 @@
   timeslots:
     - {
       startTime: "8:30",
-      endTime: "9:00",
-      sessionIds: [9] #credencialmento
-    }
-    - {
-    	startTime: "8:30",
-      endTime: "9:00",
-    	sessionIds: [1] #coffee
+      endTime: "9:15",
+    	sessionIds: [1] # credenciamento / coffee
     }
     - {
         startTime: "09:00",
@@ -58,7 +53,7 @@
     - {
         startTime: "14:20",
         endTime: "15:05",
-        sessionIds: [0], #Mboile seguro = augusto
+        sessionIds: [15], #JavaScript - Tadeu
     }
     - {
         startTime: "15:10",
@@ -78,7 +73,7 @@
     - {
         startTime: "17:30",
         endTime: "17:55",
-        sessionIds: [0],
+        sessionIds: [0], #Mboile seguro = augusto
     }
     - {
         startTime: "18:00",
