--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ exclude: ['/automation/', 'README.md', 'LICENCE.txt', 'CNAME']
 # Site Settings
 title: "GDG DevFest Sudeste 2014"
 email: "sudeste@devfest.com.br"
-description: "O maior evento para desenvolvedores Google da região sudeste!"
+description: "Os melhores desenvolvedores Google presentes no maior evento de tecnologia da região Sudeste! Venha, aprenda, mostre seu valor e esteja no topo da comunidade!"
 baseurl: "/zeppelin"
 url: "http://sudeste.devfest.com.br"
 permalink: "/blog/:title"
@@ -26,9 +26,9 @@ organizerLink: "http://lviv.gdg.org.ua/"
 # Head
 metaKeywords: "event, gdg, devfest, google, programming, android, chrome, developers, sudeste"
 twitterAccount: "@DevFestSe"
-socialImageSrcGooglePlus: "/img/seo/logo_devfest_1.png"
-socialImageSrcTwitter: "/img/seo/logo_devfest_1.png"
-socialImageSrcFacebook: "/img/seo/logo_devfest_1.png"
+socialImageSrcGooglePlus: "/img/seo/meta-gp.png"
+socialImageSrcTwitter: "/img/seo/meta-fb.png"
+socialImageSrcFacebook: "/img/seo/meta-fb.png"
 
 # Documents
 c4pUrl: "http://bit.ly/DevFestSudeste-CallForPapers"
@@ -203,11 +203,12 @@ enableHackathon: true
 # Hackathon About Block
 aboutHackathonTitle: "Destaque-se na comunidade nacional de desenvolvedores"
 hackathonRows:
- - {title: "#HackathonDevFest", image: "nerd-code.png", details: "Não basta estar lá, é preciso também programar. Por isso criamos o hackathon do DevFest Sudeste; para você montar sua equipe, buscar uma ideia e partir para a implementação! Tudo isso em poucas horas e com uma premiação que realmente vale a pena!"}
+ - {title: "#HackathonDevFest", image: "nerd-code.png", details: "Não basta estar lá, para muitos, é preciso também programar. Por isso criamos o hackathon do DevFest Sudeste; para você montar sua equipe, buscar uma ideia e partir para a implementação! Tudo isso em poucas horas e com uma premiação que realmente vale a pena! A única regra é desenvolver utilizando o Android."}
  - {title: "Android Wear", image: "hackathon-0.png", details: "Como expandir os limites com as novas possibilidades dos \"vestíveis\" em seus projetos? Nos surpreenda apresentando uma aplicação nova, de uma forma diferente ou apenas fazendo oque é óbvio mas ainda não foi feito."}
- - {title: "Google Glass", image: "hackathon-0.png", details: "Desenvolver para Google Glass não é para os mais fracos. Que tal utilizar a Glass Development Kit (GDK) para implementar com o Glass? A interface precisa ser adequada ao dispositivo bem como a interação deve ser cuidadosamente pensada. Ganhe pontos extras nesta competição desenvolvendo com a mais nova tecnologia!"}
- - {title: "Polymer", image: "hackathon-0.png", details: "Crie uma aplicação robusta e funcional em poucas horas utilizando Polymer, ou então crie seu próprio set de componentes. As ferramentas do Google para desenvolvedores são incríveis e utiliza-las em seus projetos nos enchem os olhos!"}
- - {title: "Chromecast", image: "prize-3.png", details: "Que tal utilizar o Chromecast como display para sua aplicação? Desde jogos até aplicações educacionais podem ser feitas utilizando-se do dispositivo. Destaque sua equipe implementando coisas inimagináveis com HTML5 e JavaScript! "}
+ - {title: "Google Glass", image: "hackathon-1.png", details: "Desenvolver para Google Glass não é para os fracos. Que tal utilizar o Glass Development Kit (GDK) para implementar com o Glass? A interface precisa ser adequada ao dispositivo bem como a interação deve ser cuidadosamente pensada. Ganhe pontos extras nesta competição desenvolvendo com a mais nova tecnologia!"}
+ - {title: "Polymer", image: "Polymer.png", details: "Crie uma aplicação robusta e funcional em poucas horas utilizando Polymer, ou então crie seu próprio set de componentes. As ferramentas do Google para desenvolvedores são incríveis e utiliza-las em seus projetos nos enchem os olhos!"}
+ - {title: "Chromecast", image: "prize-3.png", details: "E que tal utilizar o Chromecast como display para sua aplicação? Desde jogos até aplicações educacionais podem ser feitas utilizando-se do dispositivo. Destaque sua equipe implementando coisas inimagináveis com HTML5 e JavaScript! "}
+ - {title: "Premiação", image: "relogio.png", details: "Chega de conversa! Todos os membros de sua equipe irão faturar um smartwatch LG GWatch, basta vencer a maratona! Esteja pronto para o desafio!"}
 
 # Hackathon Judges Block
 judgesImage: "judges.jpg"
