--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -7,7 +7,7 @@
   timeslots:
     - {
       startTime: "8:30",
-      endTime: "9:15",
+      endTime: "9:10",
     	sessionIds: [1] # credenciamento / coffee
     }
     - {
@@ -28,56 +28,52 @@
     }
     - {
         startTime: "11:10",
-        endTime: "11:25",
-        sessionIds: [12], #app review - igor
-    }
-    - {
-        startTime: "11:30",
-        endTime: "12:00",
+        endTime: "11:35",
         sessionIds: [13], #tipografia - gabriel
+
     }
     - {
-        startTime: "12:00",
-        endTime: "13:00",
+        startTime: "11:40",
+        endTime: "12:40",
         sessionIds: [004], #almoço
     }
     - {
-        startTime: "13:00",
-        endTime: "13:25",
-        sessionIds: [12], #app review - igor
+        startTime: "12:45",
+        endTime: "13:10",
+        sessionIds: [16], #sketch
     }
     - {
-        startTime: "13:30",
-        endTime: "14:15",
+        startTime: "13:15",
+        endTime: "14:00",
         sessionIds: [8], #golang - paulo
     }
     - {
-        startTime: "14:20",
-        endTime: "15:05",
+        startTime: "14:05",
+        endTime: "14:50",
         sessionIds: [16], #JavaScript - Tadeu
     }
     - {
-        startTime: "15:10",
-        endTime: "15:55",
-        sessionIds: [5], #Polymer = Beto Muniz
+        startTime: "14:55",
+        endTime: "15:40",
+        sessionIds: [14], #Polymer = Beto Muniz
     }
     - {
-        startTime: "16:00",
-        endTime: "16:30",
+        startTime: "15:45",
+        endTime: "16:15",
         sessionIds: [006], #coffee
     }
     - {
-        startTime: "16:40",
-        endTime: "17:25",
+        startTime: "16:20",
+        endTime: "17:05",
         sessionIds: [11], #GCloud - Ale
     }
     - {
-        startTime: "17:30",
+        startTime: "17:10",
         endTime: "17:55",
-        sessionIds: [15], #Mboile seguro = augusto
+        sessionIds: [15], #Mobile seguro = augusto
     }
     - {
         startTime: "18:00",
-        endTime: "18:20",
-        sessionIds: [0], # encerramento?
+        endTime: "18:15",
+        sessionIds: [17], # encerramento
     }
